--- a/public/donate.html
+++ b/public/donate.html
@@ -64,7 +64,7 @@
         <textarea class="form-control" id="item-pickup" rows="3"></textarea>
       </div>
       <div class="form-group">
-        <label for="exampleFormControlTextarea1">Available Until (YYYY/MM/DD)</label>
+        <label for="exampleFormControlTextarea1">Available Until (YYYY-MM-DD)</label>
         <textarea class="form-control" id="item-availability" rows="3"></textarea>
       </div>
       <div class="form-group">
