--- a/public/birthday.html
+++ b/public/birthday.html
@@ -56,7 +56,7 @@
     <div class="col-lg-12">
       <div class="card">
         <div class="card-header">
-          Items Available:
+          Items Listed:
         </div>
         <div class="card-body" id="birthday-items">
 
