--- a/public/easter.html
+++ b/public/easter.html
@@ -53,7 +53,7 @@
 
         <div class="card">
           <div class="card-header">
-            Items Available:
+            Items Listed:
           </div>
           <div class="card-body" id="easter-items">
 
