--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-signin-client_id" content="648720041016-4n5u7sp00mdkedv33ram918bj8fb6onv.apps.googleusercontent.com">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
@@ -12,6 +13,7 @@
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 
   <title>Grandma's Attic</title>
 </head>
@@ -19,12 +21,26 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
+      <h1 class="display-4">Grandma's
+        <i class="fas fa-cat"></i> Attic!</h1>
       <hr class="my-4">
 
       <p class="lead">A place to donate your gently used or unused holiday items.</p>
       <div class="form-row d-flex justify-content-center">
-        <a class="btn btn-secondary btn-lg" id="fBtn" href="./items.html" role="button">Enter Attic <i class="fas fa-cat"></i></a>
+        <a class="btn btn-secondary btn-lg" id="fBtn" href="./items.html" role="button">Enter Attic
+          <i class="fas fa-cat"></i>
+        </a>
+        <!--Testing out Google Authentication
+          <div class="g-signin2" data-onsuccess="onSignIn"></div>
+        <a href="#" onclick="signOut();">Sign out</a>
+        <script>
+          function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+              console.log('User signed out.');
+            });
+          }
+        </script>-->
       </div>
 
     </div>
