--- a/public/items.html
+++ b/public/items.html
@@ -20,19 +20,20 @@
 
   <div class="container">
     <div class="jumbotron">
-      <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
+      <h1 class="display-4">Grandma's
+        <i class="fas fa-cat"></i> Attic!</h1>
       <p class="lead">A place to donate your gently used or unused holiday items.</p>
       <hr class="my-4">
       <p>Browse through a selection of holiday decor and goods.</p>
       <div class="form-row d-flex justify-content-center">
-        <a class="btn btn-secondary btn-lg" id="fBtn" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
-        <a class="btn btn-secondary btn-lg" id="tbtn" href="./donate.html" role="button">Donate Here! <i class="fas fa-cat"></i></a>
+        <a class="btn btn-secondary btn-lg" id="fBtn" href="./index.html" role="button">Exit Attic
+          <i class="fas fa-cat"></i>
+        </a>
+        <a class="btn btn-secondary btn-lg" id="tbtn" href="./donate.html" role="button">Donate Here!
+          <i class="fas fa-cat"></i>
+        </a>
       </div>
     </div>
-
-
-
-
 
     <div class="card-deck mt-4">
       <div class="row">
@@ -42,7 +43,8 @@
             <img class="card-img-top" id="christmas" src="assets/images/xmas.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Christmas</h5>
-              <p class="card-text"><small class="text-muted">
+              <p class="card-text">
+                <small class="text-muted">
                   <p>Christmas Trees</p>
 
                   <p>Ornaments</p>
@@ -53,13 +55,13 @@
           </div>
         </div>
 
-
         <div class="col-lg-3 col-md-3 col-sm-1">
           <div class="card">
             <img class="card-img-top" id="valentines" src="assets/images/hearts.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Valentine's Day</h5>
-              <p class="card-text"><small class="text-muted">
+              <p class="card-text">
+                <small class="text-muted">
 
                   <p>Exchange Cards</p>
                   <p>Tableware</p>
@@ -75,7 +77,8 @@
             <img class="card-img-top" id="easter" src="assets/images/bunny.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Easter</h5>
-              <p class="card-text"><small class="text-muted">
+              <p class="card-text">
+                <small class="text-muted">
 
                   <p>Easter Eggs</p>
                   <p>Baskets</p>
@@ -91,7 +94,8 @@
             <img class="card-img-top" id="fourthofjuly" src="assets/images/flag.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">4th of July</h5>
-              <p class="card-text"><small class="text-muted">
+              <p class="card-text">
+                <small class="text-muted">
 
                   <p>American Flags</p>
                   <p>Sparklers</p>
@@ -104,7 +108,6 @@
       </div>
     </div>
 
-
     <div class="card-deck mt-4">
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-1">
@@ -113,7 +116,8 @@
             <img class="card-img-top" id="halloween" src="assets/images/halloween.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Halloween</h5>
-              <p class="card-text"><small class="text-muted">
+              <p class="card-text">
+                <small class="text-muted">
 
                   <p>Outdoor Decorations</p>
                   <p>Costumes</p>
@@ -124,13 +128,13 @@
           </div>
         </div>
 
-
         <div class="col-lg-3 col-md-3 col-sm-1">
           <div class="card">
             <img class="card-img-top" id="thanksgiving" src="assets/images/thanks.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Thanksgiving</h5>
-              <p class="card-text"><small class="text-muted">
+              <p class="card-text">
+                <small class="text-muted">
 
                   <p>Thanksgiving Decorations</p>
                   <p>Center Pieces</p>
@@ -146,11 +150,13 @@
             <img class="card-img-top" id="birthday" src="assets/images/birthday.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Birthday</h5>
-              <p class="card-text"><small class="text-muted">
+              <p class="card-text">
+                <small class="text-muted">
                   <p>Party Hats</p>
                   <p>Streamers/Signs</p>
                   <p>Candles</p>
-                </small></p>
+                </small>
+              </p>
             </div>
           </div>
         </div>
@@ -159,7 +165,8 @@
             <img class="card-img-top" id="other" src="assets/images/dog.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title cat">Other</h5>
-              <p class="card-text"><small class="text-muted">
+              <p class="card-text">
+                <small class="text-muted">
 
                   <p>Boxes</p>
                   <p>Wrapping Paper</p>
@@ -171,17 +178,15 @@
         </div>
       </div>
     </div>
-
-
   </div>
   <div class="col-lg-12">
 
 
-      <div class="card">
-        <div class="card-header">
-          Items Available
-        </div>
-        <div class="card-body" id="item-section">
+    <div class="card">
+      <div class="card-header">
+        Recently Listed Items:
+      </div>
+      <div class="card-body" id="item-section">
 
 
         <!-- Content will go in here -->
@@ -196,16 +201,14 @@
   <br>
   <br>
 
-
-
-
   <div class="container">
     <footer class="footer float-right">
       <div class="container">
         <p>
           <i class="fas fa-cat"></i>
-          <a href="https://www.austinpetsalive.org" target="_blank">Austin Pets Alive<br>Your donation is
-            appreciated.</a>
+          <a href="https://www.austinpetsalive.org" target="_blank">Austin Pets Alive
+            <br>Your donation is appreciated.
+          </a>
           <i class="fas fa-cat"></i>
           <a href="./index.html" target="_blank">Home</a>
         </p>
