--- a/public/valentines.html
+++ b/public/valentines.html
@@ -20,63 +20,63 @@
 
   <div class="container">
     <div class="jumbotron">
-      <h1 class="display-4">Grandma's <i class="fas fa-cat"></i> Attic!</h1>
+      <h1 class="display-4">Grandma's
+        <i class="fas fa-cat"></i> Attic!</h1>
       <p class="lead">A place to donate your gently used or unused holiday items.</p>
       <hr class="my-4">
       <p>Browse through a selection of holiday decor and goods.</p>
       <div class="form-row d-flex justify-content-center">
-        <a class="btn btn-secondary btn-lg" id="fBtn" href="./index.html" role="button">Exit Attic <i class="fas fa-cat"></i></a>
-        <a class="btn btn-secondary btn-lg" id="cBtn" href="./items.html" role="button">Explore Attic <i class="fas fa-cat"></i></a>
-        <a class="btn btn-secondary btn-lg" id="tbtn" href="./donate.html" role="button">Donate Here! <i class="fas fa-cat"></i></a>
+        <a class="btn btn-secondary btn-lg" id="fBtn" href="./index.html" role="button">Exit Attic
+          <i class="fas fa-cat"></i>
+        </a>
+        <a class="btn btn-secondary btn-lg" id="cBtn" href="./items.html" role="button">Explore Attic
+          <i class="fas fa-cat"></i>
+        </a>
+        <a class="btn btn-secondary btn-lg" id="tbtn" href="./donate.html" role="button">Donate Here!
+          <i class="fas fa-cat"></i>
+        </a>
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card">
+          <img class="card-img-top" src="assets/images/vday.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Valentine's Day</h5>
 
-
- 
-
-      <div class="row">
-        <div class="col-lg-12">
-                <div class="card">
-                  <img class="card-img-top" src="assets/images/vday.jpg" alt="Card image cap">
-                  <div class="card-body">
-                    <h5 class="card-title">Valentine's Day</h5>
-
-                  </div>
-                </div>
-              </div>
-
-       
-    <div class="col-lg-12">
-
-      <div class="card">
-        <div class="card-header">
-          Items Available:
+          </div>
         </div>
-        <div class="card-body" id="valentines-items">
+      </div>
 
-          <!-- Content will go in here -->
+      <div class="col-lg-12">
 
+        <div class="card">
+          <div class="card-header">
+            Items Listed:
+          </div>
+          <div class="card-body" id="valentines-items">
+
+            <!-- Content will go in here -->
+
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
   </div>
 
   <br>
   <br>
-
-
-
 
   <div class="container">
     <footer class="footer float-right">
       <div class="container">
         <p>
           <i class="fas fa-cat"></i>
-          <a href="https://www.austinpetsalive.org" target="_blank">Austin Pets Alive<br>Your donation is
-            appreciated.</a>
+          <a href="https://www.austinpetsalive.org" target="_blank">Austin Pets Alive
+            <br>Your donation is appreciated.
+          </a>
           <i class="fas fa-cat"></i>
           <a href="./index.html" target="_blank">Home</a>
         </p>
@@ -86,7 +86,7 @@
   </div>
   <script src="./js/browse.js"></script>
   <script src="./js/items.js"></script>
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 
