--- a/public/items.html
+++ b/public/items.html
@@ -184,7 +184,7 @@
 
     <div class="card">
       <div class="card-header">
-        Recently Listed Items:
+        <h2>Recently Listed Items:</h2>
       </div>
       <div class="card-body" id="item-section">
 
@@ -210,7 +210,10 @@
             <br>Your donation is appreciated.
           </a>
           <i class="fas fa-cat"></i>
+          <a href="./goodwill.html" target="_blank">Find a Goodwill in your area</a>
+          <i class="fas fa-cat"></i>
           <a href="./index.html" target="_blank">Home</a>
+          
         </p>
       </div>
     </footer>
