--- a/public/donate.html
+++ b/public/donate.html
@@ -88,9 +88,9 @@
               </div>
               <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
             
-                  <div class="forms">
+<!--                   <div class="forms">
                     <a class="btn btn-secondary btn-lg" id="submit" role="button">Submit <i class="fas fa-cat"></i></a>
-                  </div>
+                  </div> -->
                 </form>
               </div>
     
